# SPDX-FileCopyrightText: 2024 Pedrenrique G. Guimarães <pedrenriquegg@hotmail.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "sturdygb_core"
version = "0.2.0"
edition = "2021"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sturdygb_core"


[dependencies]
rand = "0.10.0"
pastey = "0.2.1"