# SPDX-FileCopyrightText: 2026 Pedrenrique G. Guimarães <pedrenriquegg@hotmail.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "sturdygb_core"
version = "0.3.0"
edition = "2021"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sturdygb_core"


[dependencies]
rand = "0.10.0"
pastey = "0.2.1"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
