# SPDX-FileCopyrightText: 2024 Pedrenrique G. Guimarães <pedrenriquegg@hotmail.com>
#
# SPDX-License-Identifier: MIT
[package]
name = "sturdygb"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/sturdy-robot/sturdygb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sturdygb_core = { path = "../core" }
notan = { version="0.12.1", features=["draw"]}
clap = { version = "4.5", features = ["derive"] }
rfd = "0.14"

