# SPDX-FileCopyrightText: 2024 Pedrenrique G. Guimarães <pedrenriquegg@hotmail.com>
#
# SPDX-License-Identifier: MIT
[package]
name = "sturdygb-notan"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sturdy-robot/sturdygb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sturdygb = { path = "../core" }
notan = { version="0.12.1", features=["draw"]}

